--- a/azurepipeline.yml
+++ b/azurepipeline.yml
@@ -6,6 +6,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  solutionPath: 'az400-dependencies/bipapp/bipapp.sln'  # Path to your solution file
 
 steps:
   - task: UseDotNet@2
@@ -16,19 +17,19 @@ steps:
       installationPath: $(Agent.ToolsDirectory)/dotnet
 
   - script: |
-      dotnet restore 'path/to/your/solution.sln'
+      dotnet restore '$(solutionPath)'
     displayName: 'Restore NuGet Packages'
 
   - script: |
-      dotnet build 'path/to/your/solution.sln' --configuration $(buildConfiguration)
+      dotnet build '$(solutionPath)' --configuration $(buildConfiguration)
     displayName: 'Build Solution'
 
   - script: |
-      dotnet test 'path/to/your/testproject.csproj' --configuration $(buildConfiguration) --no-build --verbosity normal
+      dotnet test '$(solutionPath)' --configuration $(buildConfiguration) --no-build --verbosity normal
     displayName: 'Run Unit Tests'
 
   - script: |
-      dotnet publish 'path/to/your/project.csproj' --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)
+      dotnet publish '$(solutionPath)' --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)
     displayName: 'Publish Application'
 
   - task: PublishBuildArtifacts@1
